tests/conformance/errors/call-mismatches.ur
kaam jama(a: adad, b: adad): adad { wapas a + b; }
jama(1);
jama(1, "do");
